--- a/client/src/styles/downNav.css
+++ b/client/src/styles/downNav.css
@@ -86,7 +86,7 @@
 @media only screen and (max-width: 600px) {
   .subscribe {
     text-align: left;
-    margin-top: 50vh;
+    margin-top: 20vh;
     margin-left: -5vw;
     padding-left: 2vw;
   }
@@ -126,5 +126,13 @@
 
     grid-template-columns: 10vw 10vw 10vw 10vw 10vw;
     margin: 2vh 0 5vh 23vw;
+  }
+  .subscribe-btn,
+  .subscribe-input {
+    font-size: 2.3vh;
+  }
+
+  .subscribe-input {
+    padding-left: 3vw;
   }
 }
